--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firstnode",
+  "name": "Vue-Express-Api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -14,5 +14,10 @@
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
