--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.15.5",
     "jade": "~1.11.0",
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
+    "multer": "^1.3.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
